@@ -43,6 +43,8 @@ dpkg (1.16.1) UNRELEASED; urgency=low
   * Clarify the current dpkg behaviour when running the dpkg-deb and
     dpkg-query back-ends, of not passing through back-end specific options
     when running them from dpkg. Closes: #610940
+  * Use “unselected” as an adjective in dpkg output messages instead of
+    “deselected”. Closes: #231089
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
